[#68863168] improves the lcnaf query to return a smaller set of records

--- a/plugins/lcnaf/frontend/locales/en.yml
+++ b/plugins/lcnaf/frontend/locales/en.yml
@@ -2,6 +2,9 @@ en:
   plugins:
     lcnaf:
       label: LCNAF Import
+      search:
+        family_name: Family Name
+        given_name: Given Name
       actions:
         search: Search
         import: Import
